--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
   </head>
   <body>
     <header>
-      <h1 class="text-center">Welcome to phone hunter</h1>
+      <h1 class="text-center mb-5">Welcome to phone hunter</h1>
     </header>
-    <div class="container">
-        <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
-           
-          </div>
+    <div class="mb-3">
+        <input id="search-field" type="email" class="form-control w-50 d-inline"  placeholder="Search Your Phone">
+        <button id="btn-search" class="btn btn-primary">Search</button>
     </div>
-
+    <div class="container">
+      <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4"></div>
+    </div>
+    <div id="not-found" class='text-center text-danger mt-5 d-none'>
+        <h1>NO RESULT FOUND</h1>
+    </div>
+      
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
