--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <div id="not-found" class='text-center text-danger mt-5 d-none'>
         <h1>NO RESULT FOUND</h1>
     </div>
+    <!-- Spinner -->
+    <div id="loader" class="text-center text-success mt-5 d-none">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
       
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
