show all button done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <span class="visually-hidden">Loading...</span>
       </div>
     </div>
+
+    <!-- Show All button -->
+
+    <div id="show-all" class="text-center m-5 d-none">
+      <div id="btn-show-all" class="btn btn-primary">Show All</div>
+    </div>
       
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
