load phoneDetail done

--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
     <header>
       <h1 class="text-center mb-5">Welcome to phone hunter</h1>
     </header>
+
+    <!-- Search field -->
     <div class="mb-3">
         <input id="search-field" type="email" class="form-control w-50 d-inline"  placeholder="Search Your Phone">
-        <button id="btn-search" class="btn btn-primary">Search</button>
+        <button  id="btn-search" class="btn btn-primary">Search</button>
     </div>
+
+    <!-- main container -->
     <div class="container">
       <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4"></div>
     </div>
+    <!-- No result  -->
     <div id="not-found" class='text-center text-danger mt-5 d-none'>
         <h1>NO RESULT FOUND</h1>
     </div>
